--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,7 @@
 @import './components/main-page/features';
 @import './components/main-page/work';
 @import './components/main-page/team';
+@import './components/main-page/social-list';
+@import './components/main-page/clients';
+@import './components/page-footer';
+@import './components/modal';
