--- a/sass/components/main-page/_social-list.scss
+++ b/sass/components/main-page/_social-list.scss
@@ -1,30 +1,30 @@
 .social-list {
   display: flex;
-  margin: 16px 32px 30px 32px;
+  margin: 16px 122px 0 122px;
 }
 
 .social-list__item:not(:last-child) {
   margin-right: 10px;
 }
 
-.social-list__icon {
-  fill: currentColor;
-}
-
 .social-list__link {
   display: block;
   padding: 12px;
 
-  width: 44px;
   height: 44px;
-  border-radius: 50%;
   color: $icon-color;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-radius: 50%;
 
-  &:hover,
-  &:focus {
-    background-color: $accent-color;
-    color: $primary-white-color;
-  }
+  // transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  //   color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  // &:hover,
+  // &:focus {
+  //   background-color: $accent-color;
+  //   color: $primary-white-color;
+  // }
+}
+
+.social-list__icon {
+  fill: currentColor;
 }
