--- a/sass/components/main-page/_team.scss
+++ b/sass/components/main-page/_team.scss
@@ -4,6 +4,8 @@
 // }
 
 .team-list__item {
+  text-align: center;
+  padding-bottom: 24px;
   border-radius: 0 0 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -14,23 +16,23 @@
   }
 }
 
-// .team-list__image {
-//   display: block;
-//   margin-bottom: 30px;
-// }
+.team-list__image {
+  display: block;
+  margin-bottom: 30px;
+}
 
-// .team-list__name {
-//   margin-bottom: 10px;
+.team-list__name {
+  margin-bottom: 10px;
 
-//   color: $primary-text-color;
+  color: $primary-text-color;
 
-//   font-weight: 500;
-//   @include font(16px, 1.17);
-// }
+  font-weight: 500;
+  @include font(16px, 1.17);
+}
 
-// .team-list__position {
-//   margin: 0;
-//   color: $secondary-text-color;
+.team-list__position {
+  margin: 0;
+  color: $secondary-text-color;
 
-//   @include font(16px, 1.2);
-// }
+  @include font(16px, 1.2);
+}
