--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -32,11 +32,11 @@ h6 {
 }
 
 .container {
-  width: 450px;
+  width: 480px;
   margin-left: auto;
   margin-right: auto;
-  // padding-left: 15px;
-  // padding-right: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 // .container-centered {
