--- a/css/main.css
+++ b/css/main.css
@@ -39,9 +39,11 @@ h6 {
 }
 
 .container {
-  width: 450px;
+  width: 480px;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .section {
@@ -80,9 +82,10 @@ h6 {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 480px;
   height: 796px;
   z-index: 999;
+  padding: 48px 40px;
   background-color: #ffffff;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
@@ -164,7 +167,7 @@ h6 {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero/hero-mob.jpg");
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-mob.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   color: #ffffff;
 }
 
