--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -13,9 +13,10 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 480px;
   height: 796px;
   z-index: 999;
+  padding: 48px 40px;
   background-color: $primary-white-color;
 
   transform: translateX(100%);
