--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ h6 {
 }
 
 .container {
-  min-width: 480px;
+  width: 480px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
@@ -82,7 +82,7 @@ h6 {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 480px;
   height: 796px;
   z-index: 999;
   padding: 48px 40px;
