--- a/css/main.css
+++ b/css/main.css
@@ -39,11 +39,9 @@ h6 {
 }
 
 .container {
-  width: 480px;
+  width: 450px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
 }
 
 .section {
@@ -82,10 +80,9 @@ h6 {
   position: fixed;
   top: 0;
   left: 0;
-  width: 480px;
+  width: 100%;
   height: 796px;
   z-index: 999;
-  padding: 48px 40px;
   background-color: #ffffff;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
@@ -167,7 +164,7 @@ h6 {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero/hero-mob.jpg");
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-mob.jpg");
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   color: #ffffff;
 }
 
