--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -13,10 +13,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 480px;
+  width: 100%;
   height: 796px;
   z-index: 999;
-  padding: 48px 40px;
   background-color: $primary-white-color;
 
   transform: translateX(100%);
