--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -32,11 +32,16 @@ h6 {
 }
 
 .container {
-  width: 450px;
+  padding-left: 15px;
+  padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  // padding-left: 15px;
-  // padding-right: 15px;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
 }
 
 // .container-centered {
