--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,7 +1,8 @@
 .page-header {
   position: relative;
   border-bottom: 1px solid #ececec;
-  padding: 16px 15px;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .navigation {
@@ -16,7 +17,9 @@
   width: 100%;
   height: 796px;
   z-index: 999;
+  padding: 48px 40px;
   background-color: $primary-white-color;
+  overflow-y: scroll;
 
   transform: translateX(100%);
   @include transition(transform);
@@ -44,19 +47,25 @@
     position: absolute;
     top: 10px;
     right: 15px;
-    color: #fff;
   }
 }
+.navigation__icon {
+  fill: currentColor;
+  @include transition(color);
 
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
+}
 // .navigation {
 //   display: flex;
 //   align-items: center;
 // }
 
-// .nav-list {
-//   display: flex;
-//   margin-left: 93px;
-// }
+.nav-list {
+  margin-bottom: 302px;
+}
 
 .nav-list__item:not(:last-child) {
   margin-bottom: 32px;
@@ -78,38 +87,75 @@
   }
 }
 
-// .navigation__link--current {
-//   color: $accent-color;
+.navigation__link--current {
+  color: $accent-color;
 
-//   &::after {
-//     content: '';
+  // &::after {
+  //   content: '';
 
-//     position: absolute;
-//     bottom: -1px;
-//     left: 0;
-//     width: 100%;
-//     height: 4px;
-//     border-radius: 2px;
-//     background-color: $accent-color;
-//   }
-// }
+  //   position: absolute;
+  //   bottom: -1px;
+  //   left: 0;
+  //   width: 100%;
+  //   height: 4px;
+  //   border-radius: 2px;
+  //   background-color: $accent-color;
+  // }
+}
 
-// .contact-list {
-//   display: flex;
-//   margin-left: auto;
-// }
+.contact-list {
+  display: flex;
+  flex-direction: column;
+}
 
-// .contact-list__item:not(:last-child) {
-//   margin-right: 50px;
-// }
+.contact-list__item {
+  margin-bottom: 32px;
+  &.accent {
+    order: -1;
+  }
+  &:last-child {
+    margin-bottom: 64px;
+  }
+}
 
-// .contact-list__link {
-//   color: $secondary-text-color;
-// }
+.contact-list__link {
+  color: $secondary-text-color;
+  @include font(24px, 1.17);
 
-// .contact-list__icon {
-//   padding: 0;
-//   fill: currentColor;
-//   align-items: center;
-//   margin-right: 10px;
-// }
+  &.accent {
+    color: $accent-color;
+    font-size: 40px;
+  }
+}
+
+.contact-list__icon {
+  display: none;
+  // padding: 0;
+  // fill: currentColor;
+  // align-items: center;
+  // margin-right: 10px;
+}
+
+.social-mobile {
+  display: flex;
+}
+
+.social-mobile__item {
+  display: flex;
+  align-items: center;
+
+  &:not(:last-child)::after {
+    content: '';
+    display: block;
+    margin-left: 10px;
+    margin-right: 10px;
+    width: 1px;
+    height: 22px;
+    background-color: rgba(33, 33, 33, 0.2);
+  }
+}
+
+.socila-mobile__link {
+  @include font(22px, 1.2);
+  color: $accent-color;
+}
