--- a/sass/components/main-page/_hero.scss
+++ b/sass/components/main-page/_hero.scss
@@ -1,12 +1,10 @@
 .hero-section {
-  max-width: 480px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #c4c4c4;
+  // background-color: #c4c4c4;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url('../images/hero/hero-mob.jpg');
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
+  background-position: center;
   color: $primary-white-color;
 }
 
