--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -11,4 +11,8 @@ body {
   background-color: $primary-white-color;
   font-family: 'Roboto', sans-serif;
   letter-spacing: 0.03em;
+
+  @media screen and (min-width: 320px) {
+    overflow-x: hidden;
+  }
 }
