--- a/css/main.css
+++ b/css/main.css
@@ -4,11 +4,6 @@ body {
   font-family: "Roboto", sans-serif;
   letter-spacing: 0.03em;
 }
-@media screen and (min-width: 320px) {
-  body {
-    overflow-x: hidden;
-  }
-}
 
 h1,
 h2,
@@ -44,17 +39,13 @@ h6 {
 }
 
 .container {
+  width: 480px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
 
-@media screen and (min-width: 480px) {
-  .container {
-    width: 480px;
-  }
-}
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -253,11 +244,13 @@ h6 {
 }
 
 .hero-section {
+  width: 480px;
+  margin-right: auto;
+  margin-left: auto;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero/hero-mob.jpg");
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-mob.jpg");
   background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
+  background-size: cover;
   color: #ffffff;
 }
 
