--- a/sass/components/main-page/_hero.scss
+++ b/sass/components/main-page/_hero.scss
@@ -1,10 +1,13 @@
 .hero-section {
   // background-color: #c4c4c4;
+  width: 480px;
+  margin-right: auto;
+  margin-left: auto;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url('../images/hero/hero-mob.jpg');
   background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
+  background-size: cover;
+  // background-position: center;
   color: $primary-white-color;
 }
 
