--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,9 @@ h6 {
 }
 
 .section {
+  min-width: -webkit-fit-content;
+  min-width: -moz-fit-content;
+  min-width: fit-content;
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -250,7 +253,7 @@ h6 {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero/hero-mob.jpg");
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-mob.jpg");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   color: #ffffff;
 }
 
@@ -414,6 +417,9 @@ h6 {
 }
 
 .page-footer {
+  min-width: -webkit-fit-content;
+  min-width: -moz-fit-content;
+  min-width: fit-content;
   background-color: #2f303a;
 }
 
