--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,11 @@ body {
   font-family: "Roboto", sans-serif;
   letter-spacing: 0.03em;
 }
+@media screen and (min-width: 320px) {
+  body {
+    overflow-x: hidden;
+  }
+}
 
 h1,
 h2,
@@ -286,7 +291,19 @@ h6 {
 }
 
 .features-list__thumb {
-  padding: 25px 190px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  max-width: 450px;
   margin-bottom: 30px;
   background-color: #f5f4fa;
   border-radius: 4px;
