--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -24,9 +24,14 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  min-width: 450px;
-  min-height: 609px;
-  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: calc(100vw - 2 * 15px);
+  max-width: 450px;
+  // max-height: 609px;
+  padding-top: 40px;
+  padding-bottom: 40px;
   background-color: $primary-white-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -65,6 +70,10 @@
   text-align: center;
 }
 
+.modal-form {
+  width: calc(100% - 2 * 40px);
+}
+
 .modal-form__field {
   position: relative;
   display: flex;
@@ -91,7 +100,7 @@
 
 .modal-form__input {
   padding: 0 42px;
-  width: 370px;
+  max-width: 370px;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -110,9 +119,9 @@
 
 .modal-form__comment {
   padding: 12px 16px;
-  resize: none;
-  width: 370px;
+  max-width: 370px;
   height: 120px;
+  resize: none;
   outline: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -178,7 +187,7 @@
 
 .accept__text {
   display: inline-block;
-  @include font(14px, 1.7);
+  @include font(12px, 1.17);
   color: $secondary-text-color;
 }
 
