--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -32,11 +32,15 @@ h6 {
 }
 
 .container {
-  width: 480px;
+  // width: 480px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
 }
 
 // .container-centered {
