--- a/sass/components/main-page/_hero.scss
+++ b/sass/components/main-page/_hero.scss
@@ -1,18 +1,22 @@
 .hero-section {
   // background-color: #c4c4c4;
-  width: 480px;
-  margin-right: auto;
-  margin-left: auto;
+  // width: 480px;
+  // margin-right: auto;
+  // margin-left: auto;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url('../images/hero/hero-mob.jpg');
   background-repeat: no-repeat;
   background-size: contain;
-  // background-position: center;
+  background-position: center;
   color: $primary-white-color;
 }
 
 .hero-container {
-  padding: 118px 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 60px;
+  padding-left: 60px;
 
   text-align: center;
 }
