--- a/sass/components/main-page/_team.scss
+++ b/sass/components/main-page/_team.scss
@@ -4,7 +4,7 @@
 // }
 
 .team-list__item {
-  width: fit-content;
+  // width: fit-content;
   text-align: center;
   padding-bottom: 24px;
   border-radius: 0 0 4px 4px;
