--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,12 @@ h6 {
   }
 }
 
+@media screen and (max-width: 480px) {
+  img {
+    max-width: 100%;
+  }
+}
+
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -95,7 +101,7 @@ h6 {
   width: 100%;
   height: 796px;
   z-index: 999;
-  padding: 48px 40px;
+  padding: 48px 0 48px 40px;
   background-color: #ffffff;
   overflow-y: scroll;
   -webkit-transform: translateX(100%);
@@ -122,8 +128,8 @@ h6 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 0;
-  margin-left: 276px;
+  margin-right: 15px;
+  margin-left: auto;
   padding: 0;
   background-color: transparent;
   cursor: pointer;
@@ -253,10 +259,13 @@ h6 {
 }
 
 .hero-section {
+  max-width: 480px;
+  margin-left: auto;
+  margin-right: auto;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero/hero-mob.jpg");
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-mob.jpg");
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   background-position: center;
   color: #ffffff;
 }
@@ -273,8 +282,13 @@ h6 {
       -ms-flex-align: center;
           align-items: center;
   padding-top: 60px;
-  padding-left: 60px;
+  padding-bottom: 60px;
   text-align: center;
+}
+@media screen and (min-width: 480px) {
+  .hero-container {
+    width: 480px;
+  }
 }
 
 .hero-section__title {
@@ -344,6 +358,16 @@ h6 {
 }
 
 .team-list__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
   padding-bottom: 24px;
   border-radius: 0 0 4px 4px;
@@ -445,15 +469,11 @@ h6 {
 }
 
 .page-footer__container {
-  padding: 60px 0;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
-.page-footer__logo {
-  margin: 0 163px 20px 163px;
-  color: #ffffff;
-}
-
-.address-list {
+.address-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -464,6 +484,15 @@ h6 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.page-footer__logo {
+  margin-bottom: 20px;
+  color: #ffffff;
+}
+
+.address-list {
+  text-align: center;
   margin-bottom: 60px;
   font-style: normal;
 }
@@ -551,12 +580,19 @@ h6 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 100%;
+}
+
+.form-join__field {
+  width: 100%;
 }
 
 .form-join__input {
   padding: 15px;
   margin-bottom: 20px;
-  width: 450px;
+  width: 100%;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -568,6 +604,11 @@ h6 {
 }
 .form-join__input:focus-within {
   border-color: #2196f3;
+}
+@media screen and (min-width: 480px) {
+  .form-join__input {
+    width: 450px;
+  }
 }
 
 .form-join__btn {
