--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -47,3 +47,9 @@ h6 {
 //   display: flex;
 //   align-items: center;
 // }
+
+img {
+  @media screen and (max-width: 480px) {
+    max-width: 100%;
+  }
+}
