--- a/sass/components/_join-form.scss
+++ b/sass/components/_join-form.scss
@@ -8,18 +8,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 100%;
 }
 
-// .form-join__field {
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-// }
+.form-join__field {
+  width: 100%;
+}
 
 .form-join__input {
   padding: 15px;
   margin-bottom: 20px;
-  width: 450px;
+  width: 100%;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -30,6 +31,10 @@
 
   &:focus-within {
     border-color: $accent-color;
+  }
+
+  @media screen and (min-width: 480px) {
+    width: 450px;
   }
 }
 
