--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -1,22 +1,26 @@
 .page-footer {
-  // min-width: fit-content;
   background-color: $primary-background-color;
 }
 
 .page-footer__container {
-  padding: 60px 0;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.address-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .page-footer__logo {
-  margin: 0 163px 20px 163px;
+  margin-bottom: 20px;
 
   color: $primary-white-color;
 }
 
 .address-list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  text-align: center;
   margin-bottom: 60px;
   font-style: normal;
 }
