--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -17,7 +17,7 @@
   width: 100%;
   height: 796px;
   z-index: 999;
-  padding: 48px 40px;
+  padding: 48px 0 48px 40px;
   background-color: $primary-white-color;
   overflow-y: scroll;
 
@@ -36,8 +36,8 @@
   align-items: center;
   justify-content: center;
 
-  margin: 0;
-  margin-left: 276px;
+  margin-right: 15px;
+  margin-left: auto;
   padding: 0;
   background-color: transparent;
   cursor: pointer;
@@ -49,6 +49,7 @@
     right: 15px;
   }
 }
+
 .navigation__icon {
   fill: currentColor;
   @include transition(color);
