--- a/sass/components/main-page/_team.scss
+++ b/sass/components/main-page/_team.scss
@@ -4,7 +4,9 @@
 // }
 
 .team-list__item {
-  // width: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
   padding-bottom: 24px;
   border-radius: 0 0 4px 4px;
