--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,3 +12,5 @@
 @import './components/main-page/clients';
 @import './components/page-footer';
 @import './components/modal';
+@import './components/portfolio-page/filter';
+@import './components/portfolio-page/cardset';
