Edit clients section

--- a/css/main.css
+++ b/css/main.css
@@ -441,14 +441,14 @@ h6 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 210px;
-  height: 92px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
   color: #afb1b8;
