--- a/sass/components/main-page/_clients.scss
+++ b/sass/components/main-page/_clients.scss
@@ -11,10 +11,10 @@
 
 .clients-list__link {
   display: flex;
-  width: 210px;
-  height: 92px;
   align-items: center;
   justify-content: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
 
   border: 1px solid #afb1b8;
   border-radius: 4px;
