--- a/css/main.css
+++ b/css/main.css
@@ -98,12 +98,12 @@ h6 {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 796px;
+  width: 100vw;
+  height: 100vh;
   z-index: 999;
-  padding: 48px 0 48px 40px;
+  padding: 48px 40px 48px 40px;
   background-color: #ffffff;
-  overflow-y: scroll;
+  overflow: scroll;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -112,6 +112,7 @@ h6 {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mobile-menu.is-open {
+  display: block;
   -webkit-transform: translateX(0);
           transform: translateX(0);
 }
@@ -237,7 +238,7 @@ h6 {
 }
 
 .socila-mobile__link {
-  font-size: 22px;
+  font-size: 18px;
   line-height: 1.2;
   color: #2196f3;
 }
