--- a/sass/components/_join-form.scss
+++ b/sass/components/_join-form.scss
@@ -8,11 +8,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
 
-  // @media screen and (min-width: 480px) {
-  //   width: 450px;
-  // }
+  @include mobile {
+    width: 450px;
+  }
 }
 
 .form-join__field {
