--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import './base/common';
 @import './base/section';
 @import './components/page-header';
+@import './components/mobile-menu';
 @import './components/logo';
 @import './components/main-page/hero';
 @import './components/main-page/features';
