--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -8,6 +8,7 @@ h6 {
 }
 
 .link {
+  display: block;
   text-decoration: none;
 }
 
@@ -32,14 +33,17 @@ h6 {
 }
 
 .container {
-  // width: 480px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 
-  @media screen and (min-width: 480px) {
-    width: 480px;
+  @include mobile {
+    width: 450px;
+  }
+
+  @include tablet {
+    width: 738px;
   }
 }
 
@@ -47,9 +51,3 @@ h6 {
 //   display: flex;
 //   align-items: center;
 // }
-
-img {
-  @media screen and (max-width: 480px) {
-    max-width: 100%;
-  }
-}
