--- a/sass/base/_mixins.scss
+++ b/sass/base/_mixins.scss
@@ -6,3 +6,27 @@
 @mixin transition($property) {
   transition: $property 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+@mixin mobile {
+  @media screen and (min-width: 480px) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media screen and (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin desktop {
+  @media screen and (min-width: 1200px) {
+    @content;
+  }
+}
+
+@mixin retina {
+  @media (min-devide-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    @content;
+  }
+}
