--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -7,13 +7,25 @@
   padding-bottom: 60px;
 }
 
+.address-wrap {
+  @include tablet {
+    display: flex;
+    margin-bottom: 60px;
+  }
+}
+
 .address-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @include tablet {
+    margin-right: 165px;
+  }
 }
 
 .page-footer__logo {
+  margin: 0;
   margin-bottom: 20px;
 
   color: $primary-white-color;
@@ -23,6 +35,10 @@
   text-align: center;
   margin-bottom: 60px;
   font-style: normal;
+
+  @include tablet {
+    margin: 0;
+  }
 }
 
 .address-list__item:not(:last-child) {
@@ -65,6 +81,10 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 60px;
+
+  @include tablet {
+    margin: 0;
+  }
 }
 
 .join-container__list {
