--- a/sass/components/main-page/_features.scss
+++ b/sass/components/main-page/_features.scss
@@ -1,21 +1,34 @@
-.features-list__thumb {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 15px;
-  padding-bottom: 15px;
-
-  max-width: 450px;
-  margin-bottom: 30px;
-
-  background-color: $secondary-background-color;
-  border-radius: 4px;
+.features-list {
+  @include tablet {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
 }
 
 .features-list__item {
   &:not(:last-child) {
     margin-bottom: 30px;
   }
+
+  @include tablet {
+    margin: 15px;
+    width: calc((100% - 4 * 15px) / 2);
+  }
+}
+
+.features-list__thumb {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 25px;
+  padding-bottom: 25px;
+
+  max-width: 450px;
+  margin-bottom: 30px;
+
+  background-color: $secondary-background-color;
+  border-radius: 4px;
 }
 
 .features-list__title {
