--- a/sass/components/main-page/_hero.scss
+++ b/sass/components/main-page/_hero.scss
@@ -1,5 +1,4 @@
 .hero-section {
-  // background-color: #c4c4c4;
   max-width: 480px;
   margin-left: auto;
   margin-right: auto;
@@ -9,6 +8,12 @@
   background-size: cover;
   background-position: center;
   color: $primary-white-color;
+
+  @include tablet {
+    max-width: 768px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url('../images/hero/hero-tab.jpg');
+  }
 }
 
 .hero-container {
@@ -20,8 +25,9 @@
 
   text-align: center;
 
-  @media screen and (min-width: 480px) {
-    width: 480px;
+  @include tablet {
+    padding-top: 118px;
+    padding-bottom: 118px;
   }
 }
 
