--- a/css/main.css
+++ b/css/main.css
@@ -52,12 +52,12 @@ h6 {
 }
 @media screen and (min-width: 480px) {
   .container {
-    width: 450px;
+    width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
   .container {
-    width: 738px;
+    width: 768px;
   }
 }
 
@@ -183,6 +183,10 @@ h6 {
   padding: 0;
   fill: currentColor;
   margin-right: 8px;
+}
+.menu .contact-list__icon.email {
+  width: 14px;
+  height: 10px;
 }
 
 .mobile-menu {
@@ -575,8 +579,8 @@ h6 {
 }
 @media screen and (min-width: 768px) {
   .clients-list__item {
-    -ms-flex-preferred-size: calc((100% - 60px) / 3);
-        flex-basis: calc((100% - 60px) / 3);
+    -ms-flex-preferred-size: calc((100% - 90px) / 3);
+        flex-basis: calc((100% - 90px) / 3);
   }
 }
 
@@ -612,6 +616,16 @@ h6 {
 }
 
 .page-footer__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -735,6 +749,12 @@ h6 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: calc(100% - 30px);
+}
+@media screen and (min-width: 480px) {
+  .form-container {
+    width: 450px;
+  }
 }
 
 .form-join {
@@ -748,11 +768,7 @@ h6 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-@media screen and (min-width: 480px) {
-  .form-join {
-    width: 450px;
-  }
+  width: 100%;
 }
 
 .form-join__field {
@@ -848,9 +864,7 @@ h6 {
       -ms-flex-align: center;
           align-items: center;
   width: calc(100vw - 30px);
-  max-width: 450px;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding: 40px 30px;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -861,6 +875,11 @@ h6 {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+  }
 }
 
 .modal__close-btn {
@@ -890,6 +909,7 @@ h6 {
 }
 
 .modal__title {
+  margin: 0 0 0 12px;
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
@@ -897,7 +917,7 @@ h6 {
 }
 
 .modal-form {
-  width: calc(100% - 80px);
+  width: 100%;
 }
 
 .modal-form__field {
@@ -909,8 +929,10 @@ h6 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-bottom: 10px;
   color: #212121;
+}
+.modal-form__field:not(:last-child) {
+  margin-bottom: 10px;
 }
 .modal-form__field:focus-within {
   color: #2196f3;
@@ -1002,6 +1024,7 @@ h6 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-top: 30px;
   margin-bottom: 30px;
 }
 
@@ -1075,8 +1098,19 @@ h6 {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  max-width: 326px;
   margin-bottom: 25px;
+}
+@media screen and (max-width: 480px) {
+  .filter-list {
+    max-width: 326px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .filter-list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .filter-list__item {
