--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -3,6 +3,9 @@
 }
 
 .page-footer__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -10,6 +13,7 @@
 .address-wrap {
   @include tablet {
     display: flex;
+
     margin-bottom: 60px;
   }
 }
