--- a/css/main.css
+++ b/css/main.css
@@ -1098,9 +1098,9 @@ h6 {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-bottom: 25px;
+  margin-bottom: 40px;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .filter-list {
     max-width: 326px;
   }
@@ -1110,6 +1110,7 @@ h6 {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    margin-bottom: 30px;
   }
 }
 
@@ -1144,6 +1145,17 @@ h6 {
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+@media screen and (min-width: 768px) {
+  .portfolio-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+
 .card {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1160,6 +1172,12 @@ h6 {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 768px) {
+  .card {
+    margin: 15px;
+    width: calc((100% - 60px) / 2);
+  }
+}
 .card:hover, .card:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -1171,11 +1189,11 @@ h6 {
 .card__wrap {
   position: relative;
   overflow: hidden;
-  text-align: center;
 }
 
 .card__image {
   display: block;
+  max-width: 100%;
 }
 
 .card__descr {
@@ -1185,9 +1203,14 @@ h6 {
   height: 100%;
   -webkit-transform: translateY(101%);
           transform: translateY(101%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0;
-  padding-top: 77px;
-  padding-bottom: 77px;
+  padding-left: 24px;
   font-size: 18px;
   line-height: 1.5;
   color: #ffffff;
