Desktop version and team pictures

--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -39,11 +39,15 @@ h6 {
   margin-right: auto;
 
   @include mobile {
-    width: 480px;
+    max-width: 480px;
   }
 
   @include tablet {
-    width: 768px;
+    max-width: 768px;
+  }
+
+  @include desktop {
+    max-width: 1200px;
   }
 }
 
