--- a/sass/components/_join-form.scss
+++ b/sass/components/_join-form.scss
@@ -7,6 +7,10 @@
   @include mobile {
     width: 450px;
   }
+
+  @include desktop {
+    align-items: flex-start;
+  }
 }
 
 .form-join {
@@ -14,10 +18,19 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+
+  @include desktop {
+    flex-direction: row;
+    align-items: flex-start;
+  }
 }
 
 .form-join__field {
   width: 100%;
+
+  @include desktop {
+    margin-right: 12px;
+  }
 }
 
 .form-join__input {
@@ -31,6 +44,10 @@
   outline: none;
 
   @include transition(border-color);
+
+  @include desktop {
+    width: 358px;
+  }
 
   &:focus-within {
     border-color: $accent-color;
