--- a/css/main.css
+++ b/css/main.css
@@ -52,12 +52,17 @@ h6 {
 }
 @media screen and (min-width: 480px) {
   .container {
-    width: 480px;
+    max-width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
   .container {
-    width: 768px;
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
   }
 }
 
@@ -125,6 +130,11 @@ h6 {
   display: flex;
   margin-right: 96px;
 }
+@media screen and (min-width: 1200px) {
+  .menu .nav-list {
+    margin-right: 312px;
+  }
+}
 .menu .nav-list .navigation__link {
   padding-top: 32px;
   padding-bottom: 32px;
@@ -153,15 +163,30 @@ h6 {
     content: "";
     position: absolute;
     bottom: -1px;
-    left: 0;
+    left: -3px;
     width: calc(100% + 6px);
     height: 4px;
     border-radius: 2px;
     background-color: #2196f3;
   }
 }
+@media screen and (min-width: 1200px) {
+  .menu .contact-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
 .menu .contact-list__item:not(:last-child) {
   margin-bottom: 10px;
+}
+@media screen and (min-width: 1200px) {
+  .menu .contact-list__item:not(:last-child) {
+    margin-bottom: 0;
+  }
+  .menu .contact-list__item:not(:last-child):not(:last-child) {
+    margin-right: 30px;
+  }
 }
 .menu .contact-list__link {
   display: -webkit-box;
@@ -171,12 +196,12 @@ h6 {
       -ms-flex-align: center;
           align-items: center;
   color: #757575;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.5;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .menu .contact-list__link {
-    font-size: 12px;
+    font-size: 14px;
   }
 }
 .menu .contact-list__icon {
@@ -184,9 +209,18 @@ h6 {
   fill: currentColor;
   margin-right: 8px;
 }
-.menu .contact-list__icon.email {
-  width: 14px;
-  height: 10px;
+@media screen and (min-width: 1200px) {
+  .menu .contact-list__icon {
+    margin-right: 10px;
+  }
+  .menu .contact-list__icon.email {
+    width: 16px;
+    height: 12px;
+  }
+  .menu .contact-list__icon.tel {
+    width: 10px;
+    height: 16px;
+  }
 }
 
 .mobile-menu {
@@ -345,6 +379,11 @@ h6 {
     margin-right: 87px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .logo {
+    margin-right: 92px;
+  }
+}
 
 .page-header__logo {
   color: #000000;
@@ -372,6 +411,13 @@ h6 {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-tab.jpg");
   }
 }
+@media screen and (min-width: 1200px) {
+  .hero-section {
+    max-width: 1600px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero/hero-desk.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-desk.jpg");
+  }
+}
 
 .hero-container {
   display: -webkit-box;
@@ -394,6 +440,11 @@ h6 {
     padding-bottom: 118px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .hero-container {
+    padding: 200px 252px;
+  }
+}
 
 .hero-section__title {
   margin-bottom: 30px;
@@ -402,6 +453,12 @@ h6 {
   line-height: 1.6;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+}
+@media screen and (min-width: 1200px) {
+  .hero-section__title {
+    font-size: 44px;
+    line-height: 1.4;
+  }
 }
 
 .hero-section__btn {
@@ -416,6 +473,11 @@ h6 {
   line-height: 1.9;
   letter-spacing: 0.06em;
   cursor: pointer;
+}
+@media screen and (min-width: 1200px) {
+  .hero-section__btn {
+    padding: 10px 32px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -438,6 +500,11 @@ h6 {
     width: calc((100% - 60px) / 2);
   }
 }
+@media screen and (min-width: 1200px) {
+  .features-list__item {
+    width: calc((100% - 120px) / 4);
+  }
+}
 
 .features-list__thumb {
   display: -webkit-box;
@@ -452,7 +519,6 @@ h6 {
           align-items: center;
   padding-top: 25px;
   padding-bottom: 25px;
-  max-width: 450px;
   margin-bottom: 30px;
   background-color: #f5f4fa;
   border-radius: 4px;
@@ -461,10 +527,15 @@ h6 {
 .features-list__title {
   margin-bottom: 10px;
   color: #212121;
+  text-align: center;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
-  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .features-list__title {
+    text-align: start;
+  }
 }
 
 .features-list__text {
@@ -476,6 +547,43 @@ h6 {
 
 .work-section {
   display: none;
+}
+@media screen and (min-width: 1200px) {
+  .work-section {
+    display: block;
+  }
+}
+
+.work-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.work-list__item {
+  position: relative;
+}
+.work-list__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.work-list__image {
+  display: block;
+}
+
+.work-list__descr {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  margin: 0;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: center;
+  color: #ffffff;
+  background-color: rgba(47, 48, 58, 0.8);
 }
 
 @media screen and (min-width: 768px) {
@@ -518,6 +626,11 @@ h6 {
     width: calc((100% - 60px) / 2);
   }
 }
+@media screen and (min-width: 1200px) {
+  .team-list__item {
+    width: calc((100% - 120px) / 4);
+  }
+}
 
 .team-list__image {
   max-width: 100%;
@@ -557,6 +670,12 @@ h6 {
   height: 44px;
   color: #afb1b8;
   border-radius: 50%;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-list__link:hover, .social-list__link:focus {
+  background-color: #2196f3;
+  color: #ffffff;
 }
 
 .social-list__icon {
@@ -581,6 +700,12 @@ h6 {
   .clients-list__item {
     -ms-flex-preferred-size: calc((100% - 90px) / 3);
         flex-basis: calc((100% - 90px) / 3);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients-list__item {
+    -ms-flex-preferred-size: calc((100% - 180px) / 6);
+        flex-basis: calc((100% - 180px) / 6);
   }
 }
 
@@ -629,6 +754,17 @@ h6 {
   padding-top: 60px;
   padding-bottom: 60px;
 }
+@media screen and (min-width: 1200px) {
+  .page-footer__container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
 
 @media screen and (min-width: 768px) {
   .address-wrap {
@@ -636,6 +772,12 @@ h6 {
     display: -ms-flexbox;
     display: flex;
     margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .address-wrap {
+    margin-bottom: 0;
+    margin-right: 93px;
   }
 }
 
@@ -656,6 +798,14 @@ h6 {
     margin-right: 165px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .address-container {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    margin-right: 70px;
+  }
+}
 
 .page-footer__logo {
   margin: 0;
@@ -671,6 +821,11 @@ h6 {
 @media screen and (min-width: 768px) {
   .address-list {
     margin: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .address-list {
+    text-align: start;
   }
 }
 
@@ -756,6 +911,13 @@ h6 {
     width: 450px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .form-container {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
 
 .form-join {
   display: -webkit-box;
@@ -770,9 +932,25 @@ h6 {
           align-items: center;
   width: 100%;
 }
+@media screen and (min-width: 1200px) {
+  .form-join {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
 
 .form-join__field {
   width: 100%;
+}
+@media screen and (min-width: 1200px) {
+  .form-join__field {
+    margin-right: 12px;
+  }
 }
 
 .form-join__input {
@@ -787,6 +965,11 @@ h6 {
   outline: none;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 1200px) {
+  .form-join__input {
+    width: 358px;
+  }
 }
 .form-join__input:focus-within {
   border-color: #2196f3;
@@ -864,7 +1047,7 @@ h6 {
       -ms-flex-align: center;
           align-items: center;
   width: calc(100vw - 30px);
-  padding: 40px 30px;
+  padding: 40px;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -879,6 +1062,11 @@ h6 {
 @media screen and (min-width: 480px) {
   .modal {
     width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
   }
 }
 
@@ -909,7 +1097,7 @@ h6 {
 }
 
 .modal__title {
-  margin: 0 0 0 12px;
+  margin: 0 0 12px 0;
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
@@ -951,7 +1139,6 @@ h6 {
 
 .modal-form__input {
   padding: 0 42px;
-  max-width: 370px;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -971,7 +1158,6 @@ h6 {
 
 .modal-form__comment {
   padding: 12px 16px;
-  max-width: 370px;
   height: 120px;
   resize: none;
   outline: none;
@@ -1024,7 +1210,7 @@ h6 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 30px;
+  margin-top: 20px;
   margin-bottom: 30px;
 }
 
@@ -1120,6 +1306,11 @@ h6 {
 .filter-list__item:not(:last-child) {
   margin-right: 8px;
 }
+@media screen and (min-width: 768px) {
+  .filter-list__item {
+    margin-bottom: 0;
+  }
+}
 
 .filter-list__btn {
   display: inline-block;
@@ -1176,6 +1367,11 @@ h6 {
   .card {
     margin: 15px;
     width: calc((100% - 60px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .card {
+    width: calc((100% - 90px) / 3);
   }
 }
 .card:hover, .card:focus {
