--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -28,9 +28,7 @@
   flex-direction: column;
   align-items: center;
   width: calc(100vw - 2 * 15px);
-  padding: 40px 30px;
-  // padding-top: 40px;
-  // padding-bottom: 40px;
+  padding: 40px;
   background-color: $primary-white-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -41,6 +39,10 @@
 
   @include mobile {
     width: 450px;
+  }
+
+  @include desktop {
+    width: 528px;
   }
 }
 
@@ -68,7 +70,7 @@
 }
 
 .modal__title {
-  margin: 0 0 0 12px;
+  margin: 0 0 12px 0;
   font-weight: 700;
   @include font(20px, 1.15);
   text-align: center;
@@ -108,7 +110,6 @@
 
 .modal-form__input {
   padding: 0 42px;
-  max-width: 370px;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -127,7 +128,6 @@
 
 .modal-form__comment {
   padding: 12px 16px;
-  max-width: 370px;
   height: 120px;
   resize: none;
   outline: none;
@@ -153,7 +153,7 @@
 .accept {
   display: flex;
   align-items: center;
-  margin-top: 30px;
+  margin-top: 20px;
   margin-bottom: 30px;
 }
 
