--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -8,6 +8,11 @@
   align-items: center;
   padding-top: 60px;
   padding-bottom: 60px;
+
+  @include desktop {
+    flex-direction: row;
+    align-items: flex-start;
+  }
 }
 
 .address-wrap {
@@ -15,6 +20,11 @@
     display: flex;
 
     margin-bottom: 60px;
+  }
+
+  @include desktop {
+    margin-bottom: 0;
+    margin-right: 93px;
   }
 }
 
@@ -25,6 +35,11 @@
 
   @include tablet {
     margin-right: 165px;
+  }
+
+  @include desktop {
+    align-items: flex-start;
+    margin-right: 70px;
   }
 }
 
@@ -42,6 +57,10 @@
 
   @include tablet {
     margin: 0;
+  }
+
+  @include desktop {
+    text-align: start;
   }
 }
 
