--- a/sass/components/main-page/_clients.scss
+++ b/sass/components/main-page/_clients.scss
@@ -11,6 +11,10 @@
   @include tablet {
     flex-basis: calc((100% - 6 * 15px) / 3);
   }
+
+  @include desktop {
+    flex-basis: calc((100% - 12 * 15px) / 6);
+  }
 }
 
 .clients-list__link {
