--- a/sass/components/main-page/_social-list.scss
+++ b/sass/components/main-page/_social-list.scss
@@ -15,14 +15,14 @@
   color: $icon-color;
   border-radius: 50%;
 
-  // transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  //   color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  // &:hover,
-  // &:focus {
-  //   background-color: $accent-color;
-  //   color: $primary-white-color;
-  // }
+  &:hover,
+  &:focus {
+    background-color: $accent-color;
+    color: $primary-white-color;
+  }
 }
 
 .social-list__icon {
