--- a/sass/components/main-page/_work.scss
+++ b/sass/components/main-page/_work.scss
@@ -1,37 +1,41 @@
 .work-section {
   display: none;
+
+  @include desktop {
+    display: block;
+  }
 }
 
-// .work-list {
-//   display: flex;
-// }
+.work-list {
+  display: flex;
+}
 
-// .work-list__item {
-//   position: relative;
+.work-list__item {
+  position: relative;
 
-//   &:not(:last-child) {
-//     margin-right: 30px;
-//   }
-// }
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
+}
 
-// .work-list__image {
-//   display: block;
-// }
+.work-list__image {
+  display: block;
+}
 
-// .work-list__descr {
-//   position: absolute;
-//   bottom: 0;
-//   width: 100%;
+.work-list__descr {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 
-//   margin: 0;
-//   padding-top: 27px;
-//   padding-bottom: 27px;
+  margin: 0;
+  padding-top: 27px;
+  padding-bottom: 27px;
 
-//   font-size: 14px;
-//   font-weight: 700;
-//   text-transform: uppercase;
-//   text-align: center;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: center;
 
-//   color: $primary-white-color;
-//   background-color: rgba(47, 48, 58, 0.8);
-// }
+  color: $primary-white-color;
+  background-color: rgba(47, 48, 58, 0.8);
+}
