--- a/sass/components/portfolio-page/_cardset.scss
+++ b/sass/components/portfolio-page/_cardset.scss
@@ -18,6 +18,10 @@
     width: calc((100% - 4 * 15px) / 2);
   }
 
+  @include desktop {
+    width: calc((100% - 6 * 15px) / 3);
+  }
+
   &:hover,
   &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
